<resources>
    <string name="app_name">Lumo Ameego</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in_username">Client Number</string>
    <string name="password_hint">Password</string>
    <string name="got_my_reward">GO TO MY REWARDS</string>
    <string name="sign_in_activity">Sign In</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_newhere">NEW HERE?</string>
    <string name="error_invalid_password">This password is too short !</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">The email address entered is invalid.</string>
    <string name="baseActivityName">Lumo</string>
    <string name="rewards_categories">Deals</string>
    <string name="news">News</string>
    <string name="near_me">Near Me</string>
    <string name="your_cart">Cart</string>
    <string name="lumo_my_account">My Account</string>
    <string name="setting_support"><![CDATA[Settings & Support]]></string>
    <string name="sample_name">User Name</string>
    <string name="sample_email">name.surname@lumo.com</string>
    <string name="not_title_set">No Title</string>
    <string name="contact_desc">category photo</string>
    <string name="stock_detail_test_title">Aromababy</string>
    <string name="stock_detail_test_discount">25% Off</string>
    <string name="test_message">Lorem ipsum dolor sit amet, nibh enim volutpat feugiat semper nostra est, amet pellentesque condimentum elementum purus. Viverra nascetur, blandit sapien quisque lectus, curabitur maecenas. Commodo nullam sit nullam mi erat aliquet. Donec metus nisl vehicula donec. Morbi libero nulla, felis sagittis felis in vehicula, suspendisse nunc lacinia sodales. Non ac egestas vehicula odio, nunc mattis ut neque quam nulla, non nulla vivamus iaculis augue ultrices iusto. Turpis dolor magna justo libero, semper lectus vehicula vel. Aliquam iaculis. Nec integer sapien dis purus, praesent eget hendrerit nec proin sollicitudin. Eget lacus ac velit justo in, pharetra leo massa ut lacus diam convallis, quam integer cras odio nec. Neque integer morbi. Nulla suspendisse commodo quis, justo pellentesque vivamus, pellentesque fusce risus erat scelerisque curabitur, quisque varius consectetuer.</string>
    <string name="test_message_medium">Lorem ipsum dolor sit amet, nibh enim volutpat feugiat semper nostra est, amet pellentesque condimentum elementum purus. Viverra nascetur, blandit sapien quisque lectus, curabitur maecenas. Commodo nullam sit nullam mi erat aliquet. Donec metus nisl vehicula donec. Morbi libero nulla, felis sagittis felis in vehicula, suspendisse nunc lacinia sodales. </string>
    <string name="test_message_short">Lorem ipsum dolor sit amet, nibh enim volutpat feugiat semper nostra est, amet pellentesque condimentum elementum purus.</string>
    <string name="test_message_very_short">lorem ipsum dolor sit amet.</string>
    <string name="test_message_very_long">Lorem ipsum dolor sit amet, nibh enim volutpat feugiat semper nostra est, amet pellentesque condimentum elementum purus. Viverra nascetur, blandit sapien quisque lectus, curabitur maecenas. Commodo nullam sit nullam mi erat aliquet. Donec metus nisl vehicula donec. Morbi libero nulla, felis sagittis felis in vehicula, suspendisse nunc lacinia sodales. Non ac egestas vehicula odio, nunc mattis ut neque quam nulla, non nulla vivamus iaculis augue ultrices iusto. Turpis dolor magna justo libero, semper lectus vehicula vel. Aliquam iaculis. Nec integer sapien dis purus, praesent eget hendrerit nec proin sollicitudin. Eget lacus ac velit justo in, pharetra leo massa ut lacus diam convallis, quam integer cras odio nec. Neque integer morbi. Nulla suspendisse commodo quis, justo pellentesque vivamus, pellentesque fusce risus erat scelerisque curabitur, quisque varius consectetuer.. Lorem ipsum dolor sit amet, nibh enim volutpat feugiat semper nostra est, amet pellentesque condimentum elementum purus. Viverra nascetur, blandit sapien quisque lectus, curabitur maecenas. Commodo nullam sit nullam mi erat aliquet. Donec metus nisl vehicula donec. Morbi libero nulla, felis sagittis felis in vehicula, suspendisse nunc lacinia sodales. Non ac egestas vehicula odio, nunc mattis ut neque quam nulla, non nulla vivamus iaculis augue ultrices iusto. Turpis dolor magna justo libero, semper lectus vehicula vel. Aliquam iaculis. Nec integer sapien dis purus, praesent eget hendrerit nec proin sollicitudin. Eget lacus ac velit justo in, pharetra leo massa ut lacus diam convallis, quam integer cras odio nec. Neque integer morbi. Nulla suspendisse commodo quis, justo pellentesque vivamus, pellentesque fusce risus erat scelerisque curabitur, quisque varius consectetuer. Lorem ipsum dolor sit amet, nibh enim volutpat feugiat semper nostra est, amet pellentesque condimentum elementum purus. Viverra nascetur, blandit sapien quisque lectus, curabitur maecenas. Commodo nullam sit nullam mi erat aliquet. Donec metus nisl vehicula donec. Morbi libero nulla, felis sagittis felis in vehicula, suspendisse nunc lacinia sodales. Non ac egestas vehicula odio, nunc mattis ut neque quam nulla, non nulla vivamus iaculis augue ultrices iusto. Turpis dolor magna justo libero, semper lectus vehicula vel. Aliquam iaculis. Nec integer sapien dis purus, praesent eget hendrerit nec proin sollicitudin. Eget lacus ac velit justo in, pharetra leo massa ut lacus diam convallis, quam integer cras odio nec. Neque integer morbi. Nulla suspendisse commodo quis, justo pellentesque vivamus, pellentesque fusce risus erat scelerisque curabitur, quisque varius consectetuer.</string>
    <string name="how_to_claim">HOW TO CLAIM:</string>
    <string name="stock_detail_test_visit">Visit www.aromababy.com</string>
    <string name="stock_detail_view_loc">VIEW LOCATION</string>
    <string name="card_options_digital">DIGITAL GIFT CARD</string>
    <string name="card_options_physical">PHYSICAL GIFT CARD</string>
    <string name="test_option">Lorem ipsum dolor sit amet, nibh enim volutpat feugiat semper nostra est, amet pellentesque condimentum elementum purus. Viverra nascetur, blandit sapien quisque lectus, curabitur maecenas. Commodo nullam sit nullam mi erat aliquet. Donec metus nisl vehicula donec. Morbi libero nulla, felis sagittis felis in vehicula, suspendisse nunc lacinia sodales. Non ac egestas vehicula odio, nunc mattis ut neque quam nulla, non nulla vivamus iaculis augue ultrices iusto. Turpis dolor magna justo libero, semper lectus vehicula vel. Aliquam iaculis. Nec integer sapien dis purus, praesent eget hendrerit nec proin sollicitudin. Eget lacus ac velit justo in, pharetra leo massa ut lacus diam convallis, quam integer cras odio nec. Neque integer morbi. Nulla suspendisse commodo quis, justo pellentesque vivamus, pellentesque fusce risus erat scelerisque curabitur, quisque varius consectetuer.</string>
    <string name="devivery_type_text">Details</string>
    <string name="card_value_text">CARD VALUE</string>
    <string name="stock_detail_add_card">Add to Cart</string>
    <string name="item">ITEM:</string>
    <string name="shop_cart_item_detail">DETAILS:</string>
    <string name="shop_cart_item_price">PRICE:</string>
    <string name="shop_cart_item_quantity">Quantity</string>
    <string name="footer_subtotal">Subtotal</string>
    <string name="footer_delivery_fee">Delivery</string>
    <string name="footer_handling_fee">Handling Fee:</string>
    <string name="footer_total">Total</string>
    <string name="checkout">CHECKOUT</string>
    <string name="checkout_first_name_hint">First Name</string>
    <string name="checkout_last_name_hint">Last Name</string>
    <string name="checkout_street_address">Street Address</string>
    <string name="checkout_suburb">Suburb</string>
    <string name="checkout_postcode">Postcode</string>
    <string name="checkout_state">Select State</string>
    <string name="checkout_email">Email Address</string>
    <string name="checkout_contact_number">Contact Phone No.</string>
    <string name="next">Next</string>
    <string name="checkout_title">Checkout</string>
    <string name="detail_card_type">Select Card</string>
    <string name="detail_name_on_card">Card Holder</string>
    <string name="detail_card_number">Card No.</string>
    <string name="detail_card_exp_month">Expiry Month</string>
    <string name="detail_card_exp_year">Expiry Year</string>
    <string name="detail_cvv">CVV</string>
    <string name="confirmation_title">Confirmation</string>
    <string name="conf_card_type">Card Type:</string>
    <string name="conf_card_name">Card Name:</string>
    <string name="conf_card_number">Card Number:</string>
    <string name="conf_expiry">Expiry:</string>
    <string name="conf_ccv">CVV:</string>
    <string name="conf_user_name">Name:</string>
    <string name="conf_address">Address:</string>
    <string name="conf_email">Email:</string>
    <string name="conf_total_cost">Total Cost:</string>
    <string name="confirmation"><![CDATA[CONFIRM & PAY]]></string>
    <string name="logged_in_as">Username</string>
    <string name="app_version">Version</string>
    <string name="app_version_test">v.1.1.3</string>
    <string name="privacy_policy">View Privacy Policy</string>
    <string name="terms_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="email_customer">Email</string>
    <string name="logout_button">Log Out</string>
    <string name="call_customer_support">Phone</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_settings">Setting</string>
    <string name="refresh">Refresh</string>
    <string name="menu_settings">Setting</string>
    <string name="option"><ul> <li><i>first</i> item</li> <li>item 2</li> </ul>></string>
    <string name="options_bullet_digital_1">A digital gift card is a gift card that is delivered via email</string>
    <string name="options_bullet_digital_2">Digital gift cards may take up to 24 hours to deliver via email</string>
    <string name="options_bullet_digital_3">Digital gift cards are redeemed at store level in the same way as plastic gift cards</string>
    <string name="options_bullet_digital_4">Send to your own email address or choose to send to a friend’s email address</string>
    <string name="options_bullet_physical_1">Physical gift cards incur a delivery charge</string>
    <string name="options_bullet_physical_2">Choose from Registered Post or Courier during checkout</string>
    <string name="options_bullet_physical_3">Orders will be shipped within 5&#8211;7 business days</string>
    <string name="options_bullet_physical_4"> We only deliver to Australian physical addresses (no PO boxes)</string>
    <string name="delivery_type_tite">Select Delivery Type</string>
    <string name="price_tite">Select Price</string>
    <string name="count_tite">Select Count</string>
    <string name="questionnaire_title">Questionnaire</string>
    <string name="search_venue">Search Merchandise By Name</string>
    <string name="footer_credit_card_fee">Card Fee</string>
    <string name="terms_condition_setting"><![CDATA[View Terms & Conditions]]></string>
    <string name="conf_phone">Phone:</string>
    <string name="payment_detail_title">Payment Details</string>
    <string name="error_size_phone">Phone number must be 10 digits</string>
    <string name="error_size_card_number">Card number must be 16 digits</string>
    <string name="error_size_card_number2">Card number must be 15 digits</string>
    <string name="error_size_cvv_number">CVV number must be 3 digits</string>
    <string name="error_size_cvv_number2">CVV number must be 4 digits</string>
    <string name="no_internet_connection">Unable to load content with an internet connection. Please connect to the internet to view the page</string>
    <string name="more">More</string>
</resources>