<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/bullet1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/icon_rounded"
        android:drawablePadding="10dp"
        android:text="@string/options_bullet_digital_1" />

    <TextView
        android:id="@+id/bullet2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/icon_rounded"
        android:drawablePadding="10dp"
        android:text="@string/options_bullet_digital_2" />


    <TextView
        android:id="@+id/bullet3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/icon_rounded"
        android:drawablePadding="10dp"
        android:text="@string/options_bullet_digital_3" />


    <TextView
        android:id="@+id/bullet4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/icon_rounded"
        android:drawablePadding="10dp"
        android:text="@string/options_bullet_digital_4" />

</LinearLayout>