<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/menuBackgroundColorDark">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            style="@style/ActionBar"
            app:layout_scrollFlags="scroll|enterAlways"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@drawable/toolbar_dropshadow" />

        </FrameLayout>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:paddingBottom="40dp">

            <TextView
                android:id="@+id/stock_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:text="@string/stock_detail_test_title"/>
            <TextView
                android:id="@+id/stock_detail_discount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/stock_detail_test_discount"/>

            <ImageView
                android:id="@+id/stock_detail_img"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:scaleType="centerCrop"
                android:src="@drawable/automotive"/>

            <TextView
                android:id="@+id/stock_detail_def"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_message_medium"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"/>

            <include layout="@layout/stock_terms_layout"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/stock_item_claim_bg"
                android:layout_marginTop="10dp"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/how_to_claim"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/stock_detail_claim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:text="@string/test_message_short"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimaryDark"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/stock_detail_visit_web"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/stock_detail_test_visit"
                        android:textColor="@color/white"
                        android:layout_centerInParent="true"
                        android:gravity="center_horizontal|center_vertical"
                        android:paddingRight="13dp"/>

                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/stock_detail_view_location"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stock_detail_view_loc"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center_horizontal"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>