<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ActionBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/conf_card_type"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/conf_card_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Visa"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/conf_card_name"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/conf_card_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_message_very_short"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/conf_card_number"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/conf_card_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_message_very_short"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:text="@string/conf_expiry"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:id="@+id/conf_expiry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="11/2017"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:text="@string/conf_ccv"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:id="@+id/conf_ccv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="132"/>
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/conf_user_name"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/conf_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_message_very_short"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/conf_address"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/conf_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_message_very_short"
                    android:capitalize="sentences"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/conf_email"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/conf_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_message_very_short"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/conf_phone"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/conf_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_message_very_short"/>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/conf_total_cost"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/conf_total_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_message_very_short"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginTop="120dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/confirmation_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/confirmation"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>