<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/footer_subtotal"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/footer_subtotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$117"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/footer_delivery_fee"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/footer_delivery_fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$5.98"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="gone">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/footer_handling_fee"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/footer_handling_fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$0.00"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/footer_credit_card_fee"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/footer_creditcard_fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$0.00"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/footer_total"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/footer_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$0.00"
                android:textColor="@color/white"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:orientation="vertical"
            android:layout_gravity="right"
            android:background="@color/colorPrimary"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/footer_checkout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/checkout"
                android:textColor="@color/white"
                android:gravity="center"
                android:textStyle="bold"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
